# extending-raster-intervals

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
datasets/: O5AF.txt  O5OC.txt  O6AF.txt  O6OC.txt  datasets_locations.txt  special_cases.csv
include/join_algos/: combined_sweep.h  inter_filter.h  interval.h  mbr_no_inside.h  mbr_no_outside.h  mbr_suboptimal_2d_segt.h  mbr_sweep_brute.h  node.h  rasterization.h  ri_join_algo.h  serialize_polygon.h
include/mbr_algos/: axis_intersection.h  combined_sweep.h  mbr_2d_segt.h  mbr_forward_scan.h  mbr_no_inside.h  mbr_no_outside.h
include/utils/: compressing.h  data_reader.h  geometry_types.h  hilbert.h  interval.h  minimum_bounding_rectangle.h  node.h  pipeline.h  progressbar.hpp
preprocessing/: openstreetmap.ipynb  tiger.py
preprocessing/continents_geometries/: use_demo.ipynb
presentation/: Raster Intervals Presentation.pptx
src/: main.cc  produce_hilbert.cc
src/join_algos/: combined_sweep.cc  hodgman_rasterize.cc  inter_filter.cc  mbr_no_inside.cc  mbr_no_outside.cc  mbr_suboptimal_2d_segt.cc  mbr_sweep_brute.cc  node.cc  rasterization.cc  ri_join_algo.cc  save_info.cc  serialize_polygon.cc  weiler_rasterize.cc
src/mbr_algos/: axis_intersection.cc  combined_sweep.cc  mbr_2d_segt.cc  mbr_forward_scan.cc  mbr_no_inside.cc  mbr_no_outside.cc
src/utils/: compressing.cc  data_reader.cc  geometry_types.cc  hilbert.cc  minimum_bounding_rectangle.cc  node.cc  pipeline.cc
tests/join_algos/: Makefile  plots.ipynb  small_cases.ipynb  test_inter_filter.cc  test_inter_filter.ipynb  test_join.cc  test_mbr_filter.cc  test_rasterization.cc  test_ri_join_op.cc
tests/mbr_algos/: test_2d_segt.cc  test_combined_sweep.cc  test_forward_scan.cc  test_no_inside.cc  test_no_outside.cc
tests/utils/: test_data_reader.cc  test_geometry_types.cc
